# mindgap

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
brag-output-2026-06-24-133017/: brag-plan.md  composition-brief.md  gen_graph.py  share-copy.txt
brag-output-2026-06-24-133017/composition/: audio-data.js  design.md  graph-data.js  index.html  meta.json  package.json
docs/superpowers/plans/: 2026-06-24-readcube-mindgap-import.md
docs/superpowers/specs/: 2026-06-24-readcube-mindgap-import-design.md  second-brain-mining.md
mindgap/: analyze.py  capture.json  capture.py  capture_hook.py  cli.py  config.py  db.py  lint.py  mcp.py  mine.py  seed.json  server.py
mindgap-plugin/: .mcp.json  AGENTS.md
mindgap-plugin/.claude-plugin/: plugin.json
mindgap-plugin/skills/arxiv-explainer/: LESSONS.md  SKILL.md
mindgap-plugin/skills/knowledge-capture/: SKILL.md
mindgap-plugin/skills/loop-system/: SKILL.md
mindgap-plugin/skills/paper-to-mindmap/: SKILL.md
mindgap-plugin/skills/papers-library/: SKILL.md
mindgap/loops/arxiv-weekly/: CRON.md  (+2 more)
mindgap/web/: app.js  autorotate.js  bloom.js  cluster.js  glow3d.js  index.html  instanced3d.js  spacefx.js  starfield.js  style.css  timeline.js  warp.js
tests/: test_analyze.py  test_capture_config.py  test_capture_gate.py  test_capture_hook.py  test_cli.py  test_config.py  test_db.py  test_lint.py  test_mcp.py  test_mine.py  test_second_brain_skill.py  test_server.py  test_skill_present.py
tools/perf/: behavior_check.js  drag_hub.playwright.js
(+28 files in other folders)
